--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  GOV.UK prototype kit
+  Testing prototype
 {% endblock %}
 
 {% block content %}
