DIT top left fix

--- a/docs/views/examples/template-partial-areas.html
+++ b/docs/views/examples/template-partial-areas.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block global_header_text %}
-  GOV.UK
+  DIT
 {% endblock %}
 
 {% block header_class %}with-proposition{% endblock %}
