updated date from test

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -20,7 +20,7 @@
 		<div>
 			<p class="heading-small"> Up and Away at Bristol's International Balloon Fiesta 2017
 				<br>
-				<span style="font-weight:400;">25 September 2017eccdryfvtugyhujt7g6fr7gtyhjui</span>
+				<span style="font-weight:400;">25 September 2017</span>
 			</p>
 			<p>
 				<a href="/">View event page</a>  <br>
