--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -14,8 +14,16 @@
         Business West events
       </h1>{{releaseVersion | log }}
 
+<br>
+      <div class="form-group">
+			<input type="submit" class="button" value="Create new event">
+		</div>
 
+<br>
 
+<h2 class="heading-medium">
+			Your upcoming events
+		</h2>
 
 		<div>
 			<p class="heading-small"> Up and Away at Bristol's International Balloon Fiesta 2017
@@ -24,23 +32,14 @@
 			</p>
 			<p>
 				<a href="/">View event page</a>  <br>
-				<a href="/">Manage event</a>     <br>
-				<a href="/">View event dashboard</a>
+				<a href="/">Edit</a>     <br>
+				<a href="/">Event data</a>
 			</p>
 		</div>
 
 
-		<br>
-
-		<div class="form-group">
-			<input type="submit" class="button" value="Create new event">
-		</div>
-
-		<br>
-		<br>
-
 		<h2 class="heading-medium">
-			Past events
+			Your past events
 		</h2>
 
 
@@ -53,12 +52,16 @@
 
 			<p>
 				<a href="/">View event page</a>  <br>
-				<a href="/">Manage event</a>     <br>
-				<a href="/">View event dashboard</a>
+				<a href="/">Edit</a>     <br>
+				<a href="/">Event data</a>
 			</p>
 		</div>
 
 
+
+
+
+<br>
 
     </div>
   </div>
