Some progress on the create event

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -10,16 +10,15 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-
       <h1 class="heading-large">
         Attendees
       </h1>
 
-	  <form action="/sss" method="get" class="form">
+	  <form action="/create-event/summary" method="get" class="form">
 
 		  <fieldset class="form-group">
 			  <label class="form-label-bold">
-				  Maximum number places for attendees
+				  Maximum number places
 			  </label>
 
 			  <div class="form-date">
@@ -33,7 +32,7 @@
 		  </fieldset>
 
 
-		  <div class="form-group" style="margin-top:40px">
+		  <div class="form-group" style="margin-top:0px">
 			  <input type="submit" class="button" value="Continue">
 		  </div>
 
