--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -12,11 +12,28 @@
 
 
       <h1 class="heading-large">
-        Event description
+        Description
       </h1>
 
 
 	  <form action="/create-event/attendees" method="get" class="form">
+
+
+
+
+		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
+			  <label class="form-label-bold" for="event-name">
+				  Event title
+			  </label>
+			  <input type="text" class="form-control" id="event-name" style="width: 100%">
+		  </div>
+
+		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
+			  <label class="form-label-bold" for="event-description">
+				  Event description
+			  </label>
+			  <textarea class="form-control" name="textarea" id="event-description" rows="5" style="width: 100%"></textarea>
+		  </div>
 
 
 		  <!--
@@ -28,13 +45,6 @@
 			  <input type="text" class="form-control" id="target-audience" style="width: 100%">
 		  </div>
 			-->
-
-		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
-			  <label class="form-label-bold visuallyhidden" for="event-description">
-				  Event description
-			  </label>
-			  <textarea class="form-control" name="textarea" id="event-description" rows="5" style="width: 100%"></textarea>
-		  </div>
 
 
 		  <div class="form-group" style="margin-top:20px">
