--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -10,22 +10,26 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-
       <h1 class="heading-large">
-        Event location
+        Venue location
       </h1>
-
 
 	  <form action="/create-event/description" method="get" class="form">
 
+		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
+			  <label class="form-label-bold" for="address-venue-name">
+				  Venue name
+			  </label>
+			  <input type="text" class="form-control" id="address-venue-name" >
+			  <!-- <input type="text" class="form-control" id="address-street" style="margin-top:10px">  -->
+		  </div>
 
 		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
 			<label class="form-label-bold" for="address-building">
-					Building and Street
+					Street
 			</label>
-			<input type="text" class="form-control" id="address-building" >
-
-			<input type="text" class="form-control" id="address-street" style="margin-top:10px">
+			<input type="text" class="form-control" id="address-building">
+			<!-- <input type="text" class="form-control" id="address-street" style="margin-top:10px">  -->
 		  </div>
 
 
