create new event button fix

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -34,12 +34,15 @@
 			</p>
 		</div>
 
-		<br>
-		<div class="form-group">
-			<input type="submit" class="button" value="Create new event">
-		</div>
-		<br>
-		<br>
+
+		<form action="/create-event" method="get" class="form">
+			<br>
+			<div class="form-group">
+				<input type="submit" class="button" value="Create new event">
+			</div>
+			<br>
+			<br>
+		</form>
 
 		<h2 class="heading-medium">
 			Your past events
