some data saved

--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -16,23 +16,23 @@
       </h1>
 
 
-	  <form action="/create-event/attendees" method="get" class="form">
+	  <form action="/create-event/description-onwards" method="get" class="form">
 
 
 
 
 		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
-			  <label class="form-label-bold" for="event-name">
+			  <label class="form-label-bold" for="event-title">
 				  Event title
 			  </label>
-			  <input type="text" class="form-control" id="event-name" style="width: 100%">
+			  <input type="text" class="form-control" id="event-title" name="event-title"style="width: 100%">
 		  </div>
 
 		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
 			  <label class="form-label-bold" for="event-description">
 				  Event description
 			  </label>
-			  <textarea class="form-control" name="textarea" id="event-description" rows="5" style="width: 100%"></textarea>
+			  <textarea class="form-control" name="event-description" id="event-description" rows="5" style="width: 100%"></textarea>
 		  </div>
 
 
