--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -8,18 +8,15 @@
 
 <main id="content" role="main">
   <div class="grid-row">
-    <div class="column-two-thirds">
+    <div class="column-full">
 
       <h1 class="heading-large">
-        Attendees
+        Summary
       </h1>
 
-	  <form action="/sss" method="get" class="form">
+	  <form action="/" method="get" class="form">
 
-		  <!-- only add a heading for a list if there is more than one list -->
-		  <h2 class="heading-medium">
-			  Personal details
-		  </h2>
+
 
 		  <!-- use additional modifier class to change column widths for multiple groups of questions and answers: -->
 		  <!--   * `cya-questions-short` for short questions -->
@@ -28,10 +25,10 @@
 		  <dl class="govuk-check-your-answers cya-questions-short">
 			  <div>
 				  <dt class="cya-question">
-					  Name
+					  Title
 				  </dt>
 				  <dd class="cya-answer">
-					  Sarah Philips
+					  {{ data['event-title'] }}
 				  </dd>
 				  <dd class="cya-change">
 					  <a href="#">
@@ -42,10 +39,10 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Date of birth
+					  Time
 				  </dt>
 				  <dd class="cya-answer">
-					  5 January 1978
+					  {{ data['event-start-time'] }} to {{ data['event-finish-time'] }}
 				  </dd>
 				  <dd class="cya-change">
 					  <a href="#">
@@ -56,12 +53,24 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Home address
+					  Date
 				  </dt>
 				  <dd class="cya-answer">
-					  72 Guild Street<br />
-					  London<br />
-					  SE23 6FH
+					  {{ data['event-day'] }} {{ data['event-month'] }} {{ data['event-year'] }}
+				  </dd>
+				  <dd class="cya-change">
+					  <a href="#">
+						  Change<span class="visually-hidden">date of birth</span>
+					  </a>
+				  </dd>
+			  </div>
+
+			  <div>
+				  <dt class="cya-question">
+					  Venue
+				  </dt>
+				  <dd class="cya-answer">
+					  XYZ
 				  </dd>
 				  <dd class="cya-change">
 					  <a href="#">
@@ -72,11 +81,24 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Contact details
+					  Attendee places
 				  </dt>
 				  <dd class="cya-answer">
-					  07700 900457<br />
-					  sarah.phillips@example.com
+					  XYZ
+				  </dd>
+				  <dd class="cya-change">
+					  <a href="#">
+						  Change<span class="visually-hidden"> contact details</span>
+					  </a>
+				  </dd>
+			  </div>
+
+			  <div>
+				  <dt class="cya-question">
+					  Event description
+				  </dt>
+				  <dd class="cya-answer">
+					  {{ data['event-description'] }}
 				  </dd>
 				  <dd class="cya-change">
 					  <a href="#">
@@ -87,82 +109,11 @@
 		  </dl>
 
 
-		  <h2 class="heading-medium">
-			  Application details
-		  </h2>
-
-		  <dl class="govuk-check-your-answers cya-questions-short">
-			  <div>
-				  <dt class="cya-question">
-					  Previous application number
-				  </dt>
-				  <dd class="cya-answer">
-					  502135326
-				  </dd>
-				  <dd class="cya-change">
-					  <a href="#">
-						  Change<span class="visually-hidden"> previous application number</span>
-					  </a>
-				  </dd>
-			  </div>
-
-			  <div>
-				  <dt class="cya-question">
-					  Licence type
-				  </dt>
-				  <dd class="cya-answer">
-					  For personal use
-				  </dd>
-				  <dd class="cya-change">
-					  <a href="#">
-						  Change<span class="visually-hidden"> licence type</span>
-					  </a>
-				  </dd>
-			  </div>
-
-			  <div>
-				  <dt class="cya-question">
-					  Home address
-				  </dt>
-				  <dd class="cya-answer">
-					  72 Guild Street<br />
-					  London<br />
-					  SE23 6FH
-				  </dd>
-				  <dd class="cya-change">
-					  <a href="#">
-						  Change<span class="visually-hidden"> home address</span>
-					  </a>
-				  </dd>
-			  </div>
-
-			  <div>
-				  <dt class="cya-question">
-					  Licence period
-				  </dt>
-				  <dd class="cya-answer">
-					  This is a longer paragraph of text provided by the user to provide additional information.<br /><br />
-					  This is a second paragraph of text provided by the user.
-				  </dd>
-				  <dd class="cya-change">
-					  <a href="#">
-						  Change<span class="visually-hidden"> licence period</span>
-					  </a>
-				  </dd>
-			  </div>
-		  </dl>
-
-
-		  <h2 class="heading-medium">Now send your application</h2>
-
-		  <p class="text">
-			  By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.
-		  </p>
 
 
 
-		  <div class="form-group" style="margin-top:0px">
-			  <input type="submit" class="button" value="Continue">
+		  <div class="form-group" style="margin-top:40px">
+			  <input type="submit" class="button" value="Preview event page">
 		  </div>
 
 	  </form>
