Saving data and summary completed

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -23,9 +23,8 @@
 
 			  <div class="form-date">
 				  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
-
 				  <div class="form-group form-group-day">
-					  <input class="form-control" id="dob-day" name="dob-day" type="number" pattern="[0-9]*" min="0" max="31">
+					  <input class="form-control" id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*" >
 				  </div>
 
 			  </div>
@@ -34,6 +33,7 @@
 
 		  <div class="form-group" style="margin-top:0px">
 			  <input type="submit" class="button" value="Continue">
+			  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
 		  </div>
 
 	  </form>
