--- a/app/views/create-event/index.html
+++ b/app/views/create-event/index.html
@@ -50,7 +50,7 @@
 					  Start time
 				  </label>
 				  <div class="form-date">
-					  <p class="form-hint">For example, 14 00</p>
+					  <p class="form-hint" style="margin-bottom: 0px;">For example, 14 00</p>
 					  <div class="form-group form-group-day">
 						  <label for="start-hours">Hours</label>
 						  <input class="form-control" id="start-hours" name="start-hours" type="number" pattern="[0-9]*" >
@@ -109,8 +109,8 @@
 
 
 		  <div class="form-group">
-			<input type="submit" class="button" value="Continue">
-			<p style="margin-top:20px"><a href="/create-event/venue">I don't know the date or time</a></p>
+			  <input type="submit" class="button" value="Continue">
+			  <p style="margin-top:30px"><a href="/create-event/create-event-onwards">I don't know the date or time</a></p>
 		  </div>
 
 	  </form>
