--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -20,15 +20,15 @@
 			  <label class="form-label-bold" for="address-venue-name">
 				  Venue name
 			  </label>
-			  <input type="text" class="form-control" id="address-venue-name" >
+			  <input type="text" class="form-control" id="address-venue-name" name="address-venue-name">
 			  <!-- <input type="text" class="form-control" id="address-street" style="margin-top:10px">  -->
 		  </div>
 
 		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
-			<label class="form-label-bold" for="address-building">
+			<label class="form-label-bold" for="address-street">
 					Street
 			</label>
-			<input type="text" class="form-control" id="address-building">
+			<input type="text" class="form-control" id="address-street" name="address-street">
 			<!-- <input type="text" class="form-control" id="address-street" style="margin-top:10px">  -->
 		  </div>
 
@@ -37,19 +37,20 @@
 			  <label class="form-label-bold" for="event-town">
 				  Town or city
 			  </label>
-			  <input type="text" class="form-control" id="event-town">
+			  <input type="text" class="form-control" id="event-town"  name="event-town">
 		  </div>
 
 		  <div class="form-group" style="margin-top:10px; margin-bottom:20px; width:240px">
 			  <label class="form-label-bold" for="event-postcode">
 				  Postcode
 			  </label>
-			  <input type="text" class="form-control" id="event-postcode">
+			  <input type="text" class="form-control" id="event-postcode"  name="event-postcode">
 		  </div>
 
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Continue">
+			  <p style="margin-top:30px"><a href="/create-event/venue-onwards">I don't know the venue</a></p>
 		  </div>
 
 	  </form>
