Some validation done

--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -11,7 +11,14 @@
     <div class="column-two-thirds">
 
 
-      <h1 class="heading-large">
+	  <!--  BREADCRUMB  -->
+	  <div class="breadcrumbs">
+		<ol>
+			<li><a href="/account">Account home</a></li>
+		</ol>
+	  </div>
+
+	  <h1 class="heading-large" style="margin-top:15px">
         Description
       </h1>
 
