--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -10,7 +10,14 @@
   <div class="grid-row">
     <div class="column-full">
 
-      <h1 class="heading-large">
+      <!--  BREADCRUMB  -->
+	  <div class="breadcrumbs">
+		<ol>
+			<li><a href="/account">Account home</a></li>
+		</ol>
+	  </div>
+
+	  <h1 class="heading-large" style="margin-top:15px">
         Summary
       </h1>
 
