--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -10,31 +10,79 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-large">
+	  <!--  BREADCRUMB  -->
+	  <div class="breadcrumbs">
+		<ol>
+			<li><a href="/account">Account home</a></li>
+		</ol>
+	  </div>
+
+
+	  <!-- CONDITIONAL ERROR  -->
+		{% if errorAttendee %}
+		<div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+
+			<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+				Message to alert the user to a problem goes here
+			</h2>
+
+			<p>
+				Optional description of the errors and how to correct them
+			</p>
+
+			<ul class="error-summary-list">
+				<li><a href="#example-personal-details">Descriptive link to the question with an error</a></li>
+			</ul>
+
+		</div>
+      {% endif %}
+
+	  <h1 class="heading-large" style="margin-top:15px">
         Attendees
       </h1>
 
-	  <form action="/create-event/summary" method="get" class="form">
+	  <form action="/create-event/attendee-onwards" method="get" class="form">
 
-		  <fieldset class="form-group">
-			  <label class="form-label-bold">
-				  Maximum number places
-			  </label>
+			  <fieldset class="form-group">
 
-			  <div class="form-date">
-				  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
-				  <div class="form-group form-group-day">
-					  <input class="form-control" id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*" >
+				  {% if errorAttendee %}
+				  <div class="form-group  form-group-error">
+				  {% endif %}
+
+					  <label class="form-label-bold">
+						  Maximum number places
+
+						  {% if errorAttendee %}
+							  <span class="error-message">
+								  Error message about personal details goes here
+							  </span>
+						  {% endif %}
+					  </label>
+
+
+
+					  <div class="form-date">
+						  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
+						  <div class="form-group form-group-day">
+							  <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
+									 id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*" >
+						  </div>
+
+					  </div>
+
+				  {% if errorAttendee %}
 				  </div>
+				  {% endif %}
 
+			  </fieldset>
+
+
+			  <div class="form-group" style="margin-top:0px">
+				  <input type="submit" class="button" value="Continue">
+				  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
 			  </div>
-		  </fieldset>
 
 
-		  <div class="form-group" style="margin-top:0px">
-			  <input type="submit" class="button" value="Continue">
-			  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
-		  </div>
 
 	  </form>
 
