--- a/app/views/create-event/index.html
+++ b/app/views/create-event/index.html
@@ -7,11 +7,49 @@
 {% block content %}
 
 <main id="content" role="main">
+
+
+
   <div class="grid-row">
     <div class="column-two-thirds">
 
+	  <!--  BREADCRUMB  -->
+	  <div class="breadcrumbs">
+		<ol>
+			<li><a href="/account">Account home</a></li>
+		</ol>
+	  </div>
 
-      <h1 class="heading-large">
+
+		<!-- CONDITIONAL ERROR  -->
+		{% if errorOnDayTime %}
+		<div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+
+			<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+				Message to alert the user to a problem goes here
+			</h2>
+
+			<p>
+				Optional description of the errors and how to correct them
+			</p>
+
+			<ul class="error-summary-list">
+				{% if errorDayFound %}
+				<li><a href="#example-personal-details">Descriptive link to DAY error</a></li>
+				{% endif %}
+				{% if errorMonthFound %}
+				<li><a href="#example-personal-details">Descriptive link to MONTH error</a></li>
+				{% endif %}
+				{% if errorYearFound %}
+				<li><a href="#example-personal-details">Descriptive link to YEAR error</a></li>
+				{% endif %}
+			</ul>
+
+		</div>
+		{% endif %}
+
+
+      <h1 class="heading-large" style="margin-top:15px">
         When is the event
       </h1>
 
@@ -19,60 +57,96 @@
 	  <form action="/create-event/create-event-onwards" method="get" class="form">
 
 		  <fieldset class="form-group">
-			  <label class="form-label-bold">
-				  Event date
-			  </label>
-			  <div class="form-date">
 
-				  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
-				  <div class="form-group form-group-day">
-					  <label for="event-day">Day</label>
-					  <input class="form-control" id="event-day" name="event-day" type="number" pattern="[0-9]*" >
+			  {% if errorDayFound %}
+			  <div class="form-group  form-group-error">
+			  {% elif errorMonthFound %}
+			  <div class="form-group  form-group-error">
+			  {% elif errorYearFound %}
+			  <div class="form-group  form-group-error">
+			  {% endif %}
+
+				  <label class="form-label-bold">
+					  Event date
+
+					  {% if errorDayFound %}
+						  <span class="error-message">
+							  Enter a day from 1 to 31
+						  </span>
+					  {% endif %}
+
+					  {% if errorMonthFound %}
+						  <span class="error-message">
+							  Enter a month from 1 to 12
+						  </span>
+					  {% endif %}
+
+					  {% if errorYearFound %}
+						  <span class="error-message">
+							  Enter 2017 or later
+						  </span>
+					  {% endif %}
+
+				  </label>
+				  <div class="form-date">
+
+					  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
+					  <div class="form-group form-group-day">
+						  <label for="event-day">Day</label>
+						  <input class="form-control  {% if errorDayFound %} form-control-error {% endif %}"
+								 id="event-day" name="event-day" type="number" pattern="[0-9]*" value="{{ data['event-day'] }}">
+					  </div>
+
+					  <div class="form-group form-group-month">
+						  <label for="event-month">Month</label>
+						  <input class="form-control  {% if errorMonthFound %} form-control-error {% endif %}"
+								 id="event-month" name="event-month" type="number" pattern="[0-9]*" value="{{ data['event-month'] }}">
+					  </div>
+
+					  <div class="form-group form-group-year">
+						  <label for="event-year">Year</label>
+						  <input class="form-control   {% if errorYearFound %} form-control-error {% endif %}"
+						  		 id="event-year" name="event-year" type="number" pattern="[0-9]*">
+					  </div>
+
 				  </div>
 
-				  <div class="form-group form-group-month">
-					  <label for="event-month">Month</label>
-					  <input class="form-control" id="event-month" name="event-month" type="number" pattern="[0-9]*" >
-				  </div>
-
-				  <div class="form-group form-group-year">
-					  <label for="event-year">Year</label>
-					  <input class="form-control" id="event-year" name="event-year" type="number" pattern="[0-9]*">
-				  </div>
-
+			  {% if errorDayFound %}
 			  </div>
+			  {% endif %}
+
+
 		  </fieldset>
 
 
-
-			  <fieldset class="form-group">
-				  <label class="form-label-bold">
-					  Start time
-				  </label>
-				  <div class="form-date">
-					  <p class="form-hint" style="margin-bottom: 0px;">For example, 14 00</p>
-					  <div class="form-group form-group-day">
-						  <label for="start-hours">Hours</label>
-						  <input class="form-control" id="start-hours" name="start-hours" type="number" pattern="[0-9]*" >
-					  </div>
-					  <div class="form-group form-group-month">
-						  <label for="start-minutes">Minutes</label>
-						  <input class="form-control" id="start-minutes" name="start-minutes" type="number" pattern="[0-9]*" >
-					  </div>
-
-					  <!--
-					  <div class="form-group form-group-month multiple-choice" style="margin-left:25px; margin-top:28px">
-						  <input id="radio-inline-1" type="radio" name="radio-inline-group" value="AM">
-						  <label for="radio-inline-1">AM</label>
-					  </div>
-					  <div class="form-group form-group-month multiple-choice" style="margin-left:25px; margin-top:28px">
-						  <input id="radio-inline-2" type="radio" name="radio-inline-group" value="PM">
-						  <label for="radio-inline-2">PM</label>
-					  </div>
-					  -->
-
+		  <fieldset class="form-group">
+			  <label class="form-label-bold">
+				  Start time
+			  </label>
+			  <div class="form-date">
+				  <p class="form-hint" style="margin-bottom: 0px;">For example, 14 00</p>
+				  <div class="form-group form-group-day">
+					  <label for="start-hours">Hours</label>
+					  <input class="form-control" id="start-hours" name="start-hours" type="number" pattern="[0-9]*" >
 				  </div>
-			  </fieldset>
+				  <div class="form-group form-group-month">
+					  <label for="start-minutes">Minutes</label>
+					  <input class="form-control" id="start-minutes" name="start-minutes" type="number" pattern="[0-9]*" >
+				  </div>
+
+				  <!--
+				  <div class="form-group form-group-month multiple-choice" style="margin-left:25px; margin-top:28px">
+					  <input id="radio-inline-1" type="radio" name="radio-inline-group" value="AM">
+					  <label for="radio-inline-1">AM</label>
+				  </div>
+				  <div class="form-group form-group-month multiple-choice" style="margin-left:25px; margin-top:28px">
+					  <input id="radio-inline-2" type="radio" name="radio-inline-group" value="PM">
+					  <label for="radio-inline-2">PM</label>
+				  </div>
+				  -->
+
+			  </div>
+		  </fieldset>
 
 
 
@@ -108,9 +182,9 @@
 
 
 
-		  <div class="form-group">
+		  <div class="form-group" style="margin-top:5px">
 			  <input type="submit" class="button" value="Continue">
-			  <p style="margin-top:30px"><a href="/create-event/create-event-onwards">I don't know the date or time</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/create-event-onwards">I don't know the date or time</a></p>
 		  </div>
 
 	  </form>
