--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -7,10 +7,18 @@
 {% block content %}
 
 <main id="content" role="main">
+
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-large">
+	  <!--  BREADCRUMB  -->
+	  <div class="breadcrumbs">
+		<ol>
+			<li><a href="/account">Account home</a></li>
+		</ol>
+	  </div>
+
+	  <h1 class="heading-large" style="margin-top:15px">
         Venue location
       </h1>
 
