some progress on validation and address

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -50,7 +50,7 @@
 				  {% endif %}
 
 					  <label class="form-label-bold">
-						  Maximum number places
+						  Number of attendee places
 
 						  {% if errorAttendee %}
 							  <span class="error-message">
