--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -65,7 +65,7 @@
 					  Date
 				  </dt>
 				  <dd class="cya-answer">
-					  {{ data['event-day'] }} {{ data['event-month'] }} {{ data['event-year'] }}
+					  {{ data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}
 				  </dd>
 				  <dd class="cya-change">
 					  <a href="#">
