--- a/app/views/create-event/index.html
+++ b/app/views/create-event/index.html
@@ -58,11 +58,7 @@
 
 		  <fieldset class="form-group">
 
-			  {% if errorDayFound %}
-			  <div class="form-group  form-group-error">
-			  {% elif errorMonthFound %}
-			  <div class="form-group  form-group-error">
-			  {% elif errorYearFound %}
+			  {% if errorOnDate %}
 			  <div class="form-group  form-group-error">
 			  {% endif %}
 
@@ -100,18 +96,18 @@
 					  <div class="form-group form-group-month">
 						  <label for="event-month">Month</label>
 						  <input class="form-control  {% if errorMonthFound %} form-control-error {% endif %}"
-								 id="event-month" name="event-month" type="number" pattern="[0-9]*" value="{{ data['event-month'] }}">
+								 id="event-month" name="event-month" type="number"  value="{{ data['event-month'] }}">
 					  </div>
 
 					  <div class="form-group form-group-year">
 						  <label for="event-year">Year</label>
 						  <input class="form-control   {% if errorYearFound %} form-control-error {% endif %}"
-						  		 id="event-year" name="event-year" type="number" pattern="[0-9]*">
+						  		 id="event-year" name="event-year" type="number"  value="{{ data['event-year'] }}">
 					  </div>
 
 				  </div>
 
-			  {% if errorDayFound %}
+			  {% if errorOnDate %}
 			  </div>
 			  {% endif %}
 
@@ -127,11 +123,11 @@
 				  <p class="form-hint" style="margin-bottom: 0px;">For example, 14 00</p>
 				  <div class="form-group form-group-day">
 					  <label for="start-hours">Hours</label>
-					  <input class="form-control" id="start-hours" name="start-hours" type="number" pattern="[0-9]*" >
+					  <input class="form-control" id="start-hours" name="start-hours" type="number" pattern="[0-9]*" value="{{ data['start-hours'] }}">
 				  </div>
 				  <div class="form-group form-group-month">
 					  <label for="start-minutes">Minutes</label>
-					  <input class="form-control" id="start-minutes" name="start-minutes" type="number" pattern="[0-9]*" >
+					  <input class="form-control" id="start-minutes" name="start-minutes" type="number" pattern="[0-9]*" value="{{ data['start-minutes'] }}" >
 				  </div>
 
 				  <!--
@@ -158,11 +154,11 @@
 				  <!-- <p class="form-hint">For example, 9 30</p>  -->
 				  <div class="form-group form-group-day">
 					  <label for="finish-hours">Hours</label>
-					  <input class="form-control" id="finish-hours" name="finish-hours" type="number" pattern="[0-9]*">
+					  <input class="form-control" id="finish-hours" name="finish-hours" type="number" pattern="[0-9]*"  value="{{ data['finish-hours'] }}">
 				  </div>
 				  <div class="form-group form-group-month">
 					  <label for="finish-minutes">Minutes</label>
-					  <input class="form-control" id="finish-minutes" name="finish-minutes" type="number" pattern="[0-9]*">
+					  <input class="form-control" id="finish-minutes" name="finish-minutes" type="number" pattern="[0-9]*" value="{{ data['finish-minutes'] }}" >
 				  </div>
 
 				  <!--
