--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -43,38 +43,39 @@
 
 	  <form action="/create-event/attendee-onwards" method="get" class="form">
 
-			  <fieldset class="form-group">
+		  <!--   PLACES  -->
+		  <fieldset class="form-group">
 
-				  {% if errorAttendee %}
-				  <div class="form-group  form-group-error">
+			  {% if errorAttendee %}
+			  <div class="form-group  form-group-error">
 				  {% endif %}
 
-					  <label class="form-label-bold">
-						  Number of attendee places
+				  <label class="form-label-bold">
+					  Number of attendee places
 
-						  {% if errorAttendee %}
-							  <span class="error-message">
-								  Error message about personal details goes here
-							  </span>
-						  {% endif %}
-					  </label>
+					  {% if errorAttendee %}
+						  <span class="error-message">
+							  Error message about personal details goes here
+						  </span>
+					  {% endif %}
+				  </label>
 
 
 
-					  <div class="form-date">
-						  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
-						  <div class="form-group form-group-day">
-							  <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
-									 id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*" >
-						  </div>
-
+				  <div class="form-date">
+					  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
+					  <div class="form-group form-group-day">
+						  <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
+								 id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*" >
 					  </div>
 
-				  {% if errorAttendee %}
 				  </div>
-				  {% endif %}
 
-			  </fieldset>
+				  {% if errorAttendee %}
+			  </div>
+			  {% endif %}
+
+		  </fieldset>
 
 
 			  <div class="form-group" style="margin-top:0px">
